Fix overflow not reachable in piplines component view

--- a/src/app/pipelines/pipelines.component.css
+++ b/src/app/pipelines/pipelines.component.css
@@ -1,3 +1,7 @@
+:host {
+  overflow: auto;
+}
+
 .title-icon {
     display: flex;
     width: 2em;
